--- a/appsettings.json
+++ b/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMVCContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMVCContext-d8a11114-931a-4a35-927a-aafca28f62f6;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWebMVCContext": "server=localhost;userid=root;password=1234567*;database=saleswebmvcappdb"
   }
 }
